--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/night.css">
+		<link rel="stylesheet" href="custom.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,8 +17,121 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>RevealJS</h1>
+					<h3 class="cyan">Do your slides like a pro</h3>
+					<p class="pink">Maciej Małecki</p>
+				</section>
+				<section>
+					<p class="r-fit-text">REALLY?!</p>
+				</section>
+				<section>
+					<h3>Here we go vertical</h3>
+					<section>
+						<h4>First vertical</h4>
+						<p>Lorem ipsum...</p>
+					</section>
+					<section>
+						<h4>Second vertical</h4>
+					</section>
+				</section>
+				<section>
+					<div class="r-hstack flex gap-l">
+						<img src="img/hello.excalidraw.png" alt="Hello!">
+						<div>
+							<ul>
+								<li class="fragment" data-fragment-index="1">Let's have some</li>
+								<li class="fragment" data-fragment-index="2">nice</li>
+								<li class="fragment" data-fragment-index="2">picture</li>
+							</ul>
+						</div>
+					</div>
+				</section>
+				<section data-markdown data-separator-vertical="^--$">
+					<script type="text/template">
+						# now we go MarkDown
+						---
+						## here we can start
+
+						### writing our slides easily<!-- .element class="pink"-->
+						---
+						## we can go vertical
+						--
+						## second vertical
+
+						sadly, I don't know how to get "shared title" effect.
+						--
+						## third vertical
+
+						probably, it is not possible with MD :-(
+						---
+						### some list here
+
+						* we can do bullet list
+						* with as many elements we want
+						* and numbered list as well
+						--
+						1. First
+						2. second
+						3. third
+
+						## (numbered list)<!-- .element class="fragment" data-fragment-index="1"-->
+
+						it works <!-- .element class="fragment" data-fragment-index="1"-->
+						---
+						Images are much easier to embedd.
+
+						![Uml](img/uml.drawio.svg)<!-- .element class="whiteboard"-->
+						--
+						## Architecture!
+						![Arch](img/hello.excalidraw.png)
+						---
+						<!-- .slide: data-background="img/bomba.png" -->
+						## Tępe ch...<!-- .element: class="cyan"-->
+						---
+						### and finally
+						<div class="flex gap-l">
+							<img src="img/bomba.png" alt="Tytus">
+							<div>
+								<ul>
+									<li>Kapitan</li>
+									<li>...</li>
+								</ul>
+							</div>
+						</div>
+						---
+						### source code
+						```java[]
+						public class CreateNewCustomerService {
+							public Customer newCustomer(String name) {
+								return new Customer(name);
+							}
+						}
+						```
+						---
+						### source with animations
+						```asm[|2|5-7|9|12-15|17]
+						checkCollision: {
+							lda $D01F
+							and #%00000001
+							beq !+
+								lda gameState
+								ora #%00000001
+								sta gameState
+						!:
+							lda $D01E
+							and #%00011110
+							beq !+
+								eor $D015
+								and #%00011111
+								ora #%00000001
+								sta $D015
+						!:
+							rts
+						}
+						```
+					</script>
+				</section>
 			</div>
 		</div>
 
@@ -31,7 +145,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-
+				slideNumber: 'c/t',
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
